--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <meta name="keywords" content="metalurgica, coroa, ferramentas, pedreira, sp, qualidade, tecnologia, inovação">
 <meta name="description" content="A Metalurgica Coroa Ltda é uma empresa especializada na fabricação de ferramentas, localizada na cidade de Pedreira, SP. Oferecemos produtos de qualidade, com tecnologia e inovação, para atender às necessidades dos nossos clientes.">
 
- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+ <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
  <link rel="stylesheet" type="text/css" href="style.css">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
  <link rel="stylesheet" type="text/css" href="aos/aos.css">
- <link href="css/date-time-picker-component.min.css" rel="stylesheet">
+ <link href="/css/date-time-picker-component.min.css" rel="stylesheet">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
