--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    <nav id="header-nav" class="navbar navbar-expand-lg p-3 container-fluid position-fixed">
     <div class="container-lg">
      <a class="navbar-brand" href="index.html">
-      <img src="images/logo1.png" class="logo" style="width:200px;height :auto">
+      <img src="/images/logo1.png" class="logo" style="width:200px;height :auto">
      </a>
      <button class="navbar-toggler d-flex d-lg-none order-3 p-2 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
       <svg class="navbar-icon">
@@ -140,7 +140,7 @@
       <div class="banner-content position-absolute" data-aos="fade-up">
         <h1 class="banner-title light text-uppercase fw-bold">Metalúrgica Coroa</h1>
         <p class="light text-uppercase fw-bold">Clique No Botão Abaixo e Confira Nosso Catálogo</p>
-        <a href="download/catalogocoroa.pdf" class="btn-slide btn-medium btn-dark hover-slide-right text-uppercase mt-5" download target="_blank">
+        <a href="Download/catalogocoroa.pdf" class="btn-slide btn-medium btn-dark hover-slide-right text-uppercase mt-5" download target="_blank">
           <span>Baixe Nosso Catálogo</span>
         </a>
       </div>
@@ -188,7 +188,7 @@
      <div class="row isotope-container">
       <div class="col-lg-4 col-md-6 item machado">
        <div class="projects-content mx-auto">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="reveal-curve-top img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item1.jpg" class="reveal-curve-top img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">MACHADOS</a>
@@ -196,7 +196,7 @@
       </div>
       <div class="col-lg-4 col-md-6 item cavadeira">
        <div class="projects-content mx-auto">
-        <a href="project-single.html"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">CAVADEIRA</a>
@@ -204,7 +204,7 @@
       </div>
       <div class="col-lg-4 col-md-6 item perfurador">
        <div class="projects-content mx-auto">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">PERFURADOR</a>
@@ -212,7 +212,7 @@
       </div>
       <div class="col-lg-4 col-md-6 item lixeiras">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">LIXEIRAS</a>
@@ -220,7 +220,7 @@
       </div>
       <div class="col-lg-4 col-md-6 item forcado">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">FORCADO</a>
@@ -228,7 +228,7 @@
       </div>
       <div class="col-lg-4 col-md-6 item forcado">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">FORCADO</a>
@@ -236,7 +236,7 @@
       </div>
       <div class="col-lg-4 col-md-6 item lixeiras">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">LIXEIRAS</a>
@@ -244,7 +244,7 @@
       </div>
       <div class="col-lg-4 col-md-6 item cavadeira">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">CAVADEIRA</a>
@@ -252,7 +252,7 @@
       </div>
       <div class="col-lg-4 col-md-6 item perfurador">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
+        <a href="project-single.html"> <img src="/images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
         <a href="project-single.html">PERFURADOR</a>
@@ -262,7 +262,7 @@
     </div>
    </div>
   </section>
- <section id="revendedor" class="jarallax d-flex align-items-center" style="background-image: url(images/bg-image1.jpg); width: 100%; height: auto; background-repeat: no-repeat;">
+ <section id="revendedor" class="jarallax d-flex align-items-center" style="background-image: url(/images/bg-image1.jpg); width: 100%; height: auto; background-repeat: no-repeat;">
    <div class="container mt-5" data-aos="fade-up" data-aos-duration="1000">
     <h2 class="text-uppercase mb-3 left-pattern light">Trabalhe Conosco</h2>
     <h3 class="text-uppercase light">Seja Um Revendedor Coroa</h3><br><br>
