--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <meta name="keywords" content="metalurgica, coroa, ferramentas, pedreira, sp, qualidade, tecnologia, inovação">
 <meta name="description" content="A Metalurgica Coroa Ltda é uma empresa especializada na fabricação de ferramentas, localizada na cidade de Pedreira, SP. Oferecemos produtos de qualidade, com tecnologia e inovação, para atender às necessidades dos nossos clientes.">
 
- <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+ <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
  <link rel="stylesheet" type="text/css" href="style.css">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
  <link rel="stylesheet" type="text/css" href="aos/aos.css">
- <link href="/css/date-time-picker-component.min.css" rel="stylesheet">
+ <link href="css/date-time-picker-component.min.css" rel="stylesheet">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
    <nav id="header-nav" class="navbar navbar-expand-lg p-3 container-fluid position-fixed">
     <div class="container-lg">
      <a class="navbar-brand" href="index.html">
-      <img src="/images/logo1.png" class="logo" style="width:200px;height :auto">
+      <img src="images/logo1.png" class="logo" style="width:200px;height :auto">
      </a>
      <button class="navbar-toggler d-flex d-lg-none order-3 p-2 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
       <svg class="navbar-icon">
