Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-BR">
 <head>
  <title>METALÚRGICA COROA</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="format-detection" content="telephone=no">
 <meta name="author" content="SCWeb">
 <meta name="keywords" content="metalurgica, coroa, ferramentas, pedreira, sp, qualidade, tecnologia, inovação">
 <meta name="description" content="A Metalurgica Coroa Ltda é uma empresa especializada na fabricação de ferramentas, localizada na cidade de Pedreira, SP. Oferecemos produtos de qualidade, com tecnologia e inovação, para atender às necessidades dos nossos clientes.">
-
  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
  <link rel="stylesheet" type="text/css" href="style.css">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -18,9 +17,7 @@
  <link href="css/date-time-picker-component.min.css" rel="stylesheet">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
- <!-- script
-    ================================================== -->
+ <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
  <script src="js/modernizr.js"></script>
 </head>
 
@@ -167,8 +164,6 @@
     </div>
    </div>
   </section>
-
-
   <section id="ferramentas" class="padding-large">
     <div class="container-fluid" data-aos="fade-up" data-aos-duration="1000">
       <div class="section-header">
@@ -321,7 +316,6 @@
        <img src="images/brand-item1.png" alt="brand">
       </div>
      </div>
-    
     </div>
    </div>
   </section>
