Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
- <title>METALÚRGICA COROA</title>
+<title>Metalurgica Coroa Ltda. - Ferramentas de Ferro e Aço</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +9,9 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="author" content="SCWeb">
 <meta name="keywords" content="metalurgica, coroa, ferramentas, pedreira, sp, qualidade, tecnologia, inovação">
-<meta name="description" content="A Metalurgica Coroa Ltda é uma empresa especializada na fabricação de ferramentas, localizada na cidade de Pedreira, SP. Oferecemos produtos de qualidade, com tecnologia e inovação, para atender às necessidades dos nossos clientes.">
+<meta name="description" content="A Metalurgica Coroa Ltda. é uma empresa especializada em produtos de ferro e aço, com foco na qualidade e durabilidade dos nossos produtos.">
  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
- <link rel="stylesheet" type="text/css" href="style.css">
+ <link rel="stylesheet" type="text/css" href="css/style.css">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
  <link rel="stylesheet" type="text/css" href="aos/aos.css">
  <link href="css/date-time-picker-component.min.css" rel="stylesheet">
