--- a/index.html
+++ b/index.html
@@ -182,74 +182,74 @@
      <div class="row isotope-container">
       <div class="col-lg-4 col-md-6 item machado">
        <div class="projects-content mx-auto">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="reveal-curve-top img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item1.jpg" class="reveal-curve-top img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">MACHADOS</a>
+        <a href="#">MACHADOS</a>
        </h3>
       </div>
       <div class="col-lg-4 col-md-6 item cavadeira">
        <div class="projects-content mx-auto">
-        <a href="project-single.html"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">CAVADEIRA</a>
+        <a href="#">CAVADEIRA</a>
        </h3>
       </div>
       <div class="col-lg-4 col-md-6 item perfurador">
        <div class="projects-content mx-auto">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">PERFURADOR</a>
+        <a href="#">PERFURADOR</a>
        </h3>
       </div>
       <div class="col-lg-4 col-md-6 item lixeiras">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">LIXEIRAS</a>
+        <a href="#">LIXEIRAS</a>
        </h3>
       </div>
       <div class="col-lg-4 col-md-6 item forcado">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">FORCADO</a>
+        <a href="#">FORCADO</a>
        </h3>
       </div>
       <div class="col-lg-4 col-md-6 item forcado">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">FORCADO</a>
+        <a href="#">FORCADO</a>
        </h3>
       </div>
       <div class="col-lg-4 col-md-6 item lixeiras">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">LIXEIRAS</a>
+        <a href="#">LIXEIRAS</a>
        </h3>
       </div>
       <div class="col-lg-4 col-md-6 item cavadeira">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item2.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">CAVADEIRA</a>
+        <a href="#">CAVADEIRA</a>
        </h3>
       </div>
       <div class="col-lg-4 col-md-6 item perfurador">
        <div class="projects-content">
-        <a href="project-single.html"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
+        <a href="#"> <img src="images/projects-item1.jpg" class="img-fluid" alt="building"> </a>
        </div>
        <h3 class="fs-3 text-uppercase text-center mt-3 mb-5">
-        <a href="project-single.html">PERFURADOR</a>
+        <a href="#">PERFURADOR</a>
        </h3>
       </div>
      </div>
