Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content="metalurgica, coroa, ferramentas, pedreira, sp, qualidade, tecnologia, inovação">
 <meta name="description" content="A Metalurgica Coroa Ltda. é uma empresa especializada em produtos de ferro e aço, com foco na qualidade e durabilidade dos nossos produtos.">
  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
- <link rel="stylesheet" type="text/css" href="css/Styles.css">
+ <link rel="stylesheet" type="text/css" href="style.css">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
  <link rel="stylesheet" type="text/css" href="aos/aos.css">
  <link href="css/date-time-picker-component.min.css" rel="stylesheet">
