--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR">
+
 <head>
 <title>Metalurgica Coroa Ltda. - Ferramentas de Ferro e Aço</title>
 <meta charset="utf-8">
@@ -17,7 +18,8 @@
  <link href="css/date-time-picker-component.min.css" rel="stylesheet">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
  <script src="js/modernizr.js"></script>
 </head>
 
@@ -130,7 +132,7 @@
   <section id="intro">
     <div class="image-holder position-relative">
       <!-- Substitua a tag <img> pela tag <video> -->
-      <video src="video/fundo.mp4" autoplay muted loop class="banner-video"></video>
+      <video src="video/fundo_1.mp4" autoplay muted loop class="banner-video"></video>
     </div>
     <div class="container-lg">
       <div class="banner-content position-absolute" data-aos="fade-up">
