--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="format-detection" content="telephone=no">
 <meta name="author" content="SCWeb">
+ <link rel="icon" type="image/png" sizes="32x32" href="images/LOGO3.png">
 <meta name="keywords" content="metalurgica, coroa, ferramentas, pedreira, sp, qualidade, tecnologia, inovação">
 <meta name="description" content="A Metalurgica Coroa Ltda. é uma empresa especializada em produtos de ferro e aço, com foco na qualidade e durabilidade dos nossos produtos.">
  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
