--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
      </div><br><br>
      <div class="col-lg-6">
       <p>
-       <strong class="pb-2 d-block">A Metalurgica Coroa Ltda é uma empresa especializada na fabricação de ferramentas.</strong> <br>Fundada em 1992, a empresa está localizada na cidade de Pedreira, no estado de São Paulo. A empresa possui um porte pequeno, com 11 a 20 funcionários, e é optante pelo Simples Nacional. A Metalurgica Coroa Ltda tem como missão oferecer produtos de qualidade, com tecnologia e inovação, para atender às necessidades dos seus clientes.
+       <strong class="pb-2 d-block">A Metalurgica Coroa Ltda é uma empresa especializada na fabricação de ferramentas.</strong> <br>Fundada em 1992, a empresa está localizada na cidade de Pedreira, no estado de São Paulo. A empresa possui um porte pequeno, com 11 a 20 funcionários. A Metalurgica Coroa Ltda tem como missão oferecer produtos de qualidade, com tecnologia e inovação, para atender às necessidades dos seus clientes.
       </p>
       <a href="#contato" class="btn-slide btn-medium btn-dark hover-slide-right text-uppercase mt-5">
        <span>Fale Conosco</span>
@@ -377,7 +377,7 @@
       <p class="light mt-4">Então entre em contato conosco e comece a vender agora mesmo.<strong>
         <a href="mailto:metal.coroa@gmail.com">metal.coroa@gmail.com</a>
        </strong> ou se preferir ligue agora<strong>
-        <a href="">+55 19 97123-5044</a>
+        <a href="tel:19971235044">+55 19 97123-5044</a>
        </strong>
       </p>
        <a href="#contato" class="btn-slide btn-medium btn-dark hover-slide-right text-uppercase my-5">
